error/src/main/java/com/example/error/exception/InternalException.kt
package com.example.error.exception

class InternalException(e: Throwable) : RuntimeException(e)